# AI-PhotoAlbum

./: .gitignore  API测试步骤.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  AI模型变更应对方案.md  API集成方案.md  Dockerfile  TRAINING_FIXES.md  main.py  pyproject.toml
backend/app/agents/: chat_agent.py
backend/app/api/: agent.py  album.py  auth.py  datasets.py  deps.py  face.py  medias.py  models.py  photo.py  recycle_bin.py  search.py  tasks.py  training.py
backend/app/config/: settings.py
backend/app/core/: logger.py
backend/app/crud/: album.py  photo.py  task.py  user.py
backend/app/database/: session.py  storage.py
backend/app/models/: __init__.py  detection.py  face.py  task.py  training.py
backend/app/schemas/: __init__.py  album.py  detection.py  photo.py  response.py  task.py  training.py  user.py
backend/app/services/: README.md  album_service.py  captcha_service.py  detection_service.py  face_cluster_service.py  face_detect_service.py  face_detection.py  geocode_service.py  name_confirmation_service.py  photo_service.py  photo_vector_service.py  search_service.py  tag_service.py  thumbnail.py  trainer.py  training_service.py
backend/app/services/agent/: __init__.py  chat_agent.py  detection_agent.py  face_agent.py  llm_agent.py  metadata_agent.py  search_agent.py  supervisor.py
backend/app/services/ai_providers/: embedding.py
backend/app/tasks/: __init__.py  detection_tasks.py  dispatcher.py  scheduler.py  task_worker.py  vector_tasks.py
backend/data/geo/: china_city.geojson
backend/scripts/: build_china_geojson.py
(+73 files in other folders)
