[project]
name = "ai-photo-album-backend"
version = "0.1.0"
description = "AI智能相册后端服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.1.3",
    # 数据库
    "sqlalchemy>=2.0.50",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.18.0",
    "pgvector>=0.4.0",
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.1.3",
    # 数据验证
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.14.0",
    # Agent 框架
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    # 图像处理
    "Pillow>=12.0.0",
    "opencv-python-headless>=4.10.0",
    "pillow-heif>=0.20.0",
    "piexif>=1.1.3",
    # AI 推理
    "onnxruntime>=1.20.0",
    # 人脸检测
    "insightface>=0.7.3",
    "numpy>=1.26.0",
    "transformers>=4.40.0",
    # 工具
    "python-multipart>=0.0.30",
    "python-dotenv>=1.2.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "ultralytics>=8.4.95",
    "apscheduler>=3.11.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -v"
